Mon Jul 10 19:40:59 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Some HTML.Phishing.Bank-566 were not being found, bug
  				reported by Sven

Sat Jul  8 20:57:31 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Optimized the loop reading in the file

Tue Jul  4 09:39:41 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Better handling of bounce messages

Mon Jul  3 13:09:27 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Multiparts now only create an array when needed

Sat Jul  1 22:04:04 BST 2006 (njh)
----------------------------------
  * libclamav:	More freeing memory earlier

Sat Jul  1 17:18:17 BST 2006 (njh)
----------------------------------
  * libclamav:	Free memory earlier

Sat Jul  1 04:49:32 BST 2006 (njh)
----------------------------------
  * libclamav:	Large binhex files were not being handled gracefully. Tidied
			the handling code. Note that large binhex are not
			currently decoded.
			Bug reported by Luca

Thu Jun 29 19:42:01 CEST 2006 (acab)
  * libclamav: Revert old UPX code due to bugs
               Add algorithmic detection of Win32.Kriz

Wed Jun 28 17:16:06 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Code tidy

Wed Jun 28 15:06:08 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: include CVD header (without MD5 and digital signature)
		       at the top of db.info file

Wed Jun 28 00:00:50 CEST 2006 (tk)
----------------------------------
  * sigtool: --diff: initial version of update script generator

Mon Jun 26 20:23:22 CEST 2006 (tk)
----------------------------------
  * libclamav: allow wildcarded prefix when signature contains static
	       pattern of length AC_DEFAULT_DEPTH

Sun Jun 25 14:29:22 CEST 2006 (tk)
----------------------------------
  * libclamav/matcher-ac.c: fix possible false matches of alternatives
			    Problem reported by Nicolas Riendeau
			    <knightr*istop.com>
