@@ -102,6 +102,19 @@ The \-\-external option informs clamav\-milter to use an external program such
 as clamd(8) running either on the local server or other server(s) to perform
 the scanning.
 .TP
+\fB\-k, \-\-blacklist-time=time\fR
+Tells the number in seconds to black list an IP address (IPv4 only). This
+is especially useful with phishing which often send a number of emails one
+after the other.
+.TP
+Blacklisting speeds up scanning significantly, however it does have drawbacks
+since it is possible for a site to be incorrectly blacklisted because of DHCP
+or an unsafe smart-host.
+To avoid this, blacklisting does not last for ever. The recommended value is
+60.
+.TP
+Machines on the LAN, the local host, and machines that are our MX peers are
+never blacklisted.
 \fB-l, \-\-local\fR
 Also scan messages sent from LAN. You probably want this especially if
 your LAN is populated by machines running Windows or DOS.
@@ -109,6 +122,7 @@ your LAN is populated by machines running Windows or DOS.
 Machines with IP addresses within the ranges 192.168.0.0/16, 10.0.0.0/24,
 172.16.0.0/20 and 169.254.0.0/16 are defined as 'local'. Messages from
 other machines are always scanned.
+An extra IP address may be added with the \-\-ignore option.
 .TP
 \fB-M, \-\-freshclam-monitor\fR
 When not running in external mode, this option tells clamav\-milter how
@@ -206,6 +220,10 @@ Tells clamav\-milter what do to if the max-children number is exceeded.
 Usually clamav\-milter waits until a child dies or the timeout value has been
 exceeded, which ever comes first, however with dont-wait enabled, clamav\-milter
 will inform the remote SMTP client to retry later.
+.TP
+\fB\-\-ignore ipAddr\fR
+\fIipAddr\fR is taken to be an extra IPv4 address which is treated as being on
+the LAN for the purposes of the \-\-local argument.
 .TP
 \fB\-\-template\-file=file \-t file\fR
 File points to a file whose contents is sent as the warning message whenever a
